syntax = "proto3";
 
package helloworld;
 
// 指定 Go 包的路径
option go_package = ".;proto";
 
// 这是一个rpc服务
service Hello {
    rpc Hello(HelloRequest) returns (HelloResponse);
}
 
message HelloRequest {
    string name = 1; // 1 是编号
}
 
message HelloResponse {
    string reply = 1;
}

service Insert {
    rpc Insert(InsertRequest) returns (InsertResponse);
}

message InsertRequest {
    string name = 1;
}

message InsertResponse {
    int64 id = 1;
}